# facilitador

./: Components.ods
Hardware/: Components.ods  Notes.txt
Hardware/Camera/: Camera.kicad_pcb  Camera.kicad_prl  Camera.kicad_pro  Camera.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
Hardware/CameraMCU/: .cproject  .mxproject  .project  CameraMCU.ioc
Hardware/CameraMCU/Core/Inc/: stm32f4xx_hal_conf.h
Hardware/CameraMCU/Core/Src/: main.c  stm32f4xx_hal_msp.c
Hardware/Lib.pretty/: IM69D130V01XTSA1.lib  MIC_IM69D130V01XTSA1.kicad_mod  SAMTEC_ZF5S-24-01-T-WT.kicad_mod  ZF5S-24-01-T-WT.lib
Software/: .gitignore
Software/camera/: Cargo.toml  memory.x
Software/camera/.cargo/: config.toml
Software/camera/src/: main.rs
Software/common/: Cargo.toml
Software/common/src/: alg1.rs  algorithm.rs  key.rs  lib.rs
Software/cryptanalysis/: Cargo.toml
Software/cryptanalysis/src/: main.rs
Software/desktop/: Cargo.toml
Software/desktop/src/: main.rs
Software/radio_test_rx/: .gitignore  Cargo.toml  memory.x
Software/radio_test_rx/.cargo/: config.toml
Software/radio_test_rx/src/: main.rs
Software/radio_test_tx/: Cargo.toml
Software/radio_test_tx/src/: main.rs
